--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 73
-</p><p class="card-text">Number of spectra: 4670
-</p><p class="card-text">Last update: 2025-09-05, 07:31</p>
+<p class="card-text">Number of stars: 74
+</p><p class="card-text">Number of spectra: 4671
+</p><p class="card-text">Last update: 2025-09-09, 16:31</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -917,6 +917,17 @@
       <td>2025-07-20</td>
       <td>2025-08-08</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-08-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novaoph2025.html">Nova Oph 2025</a></td>
+      <td>17 30 12.30</td>
+      <td>-27 53 48.88</td>
+      <td>V4371 OPh</td>
+      <td>TCP J17301230-2753488</td>
+      <td>1</td>
+      <td>2025-09-09</td>
+      <td>2025-09-09</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-09-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
