--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 74
-</p><p class="card-text">Number of spectra: 4684
-</p><p class="card-text">Last update: 2025-09-24, 15:36</p>
+<p class="card-text">Number of stars: 76
+</p><p class="card-text">Number of spectra: 4687
+</p><p class="card-text">Last update: 2025-09-24, 16:18</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -922,12 +922,34 @@
       <td><a href="novaoph2025.html">Nova Oph 2025</a></td>
       <td>17 30 12.30</td>
       <td>-27 53 48.88</td>
-      <td>V4371 OPh</td>
+      <td>V4371 Oph</td>
       <td>TCP J17301230-2753488</td>
-      <td>7</td>
+      <td>8</td>
       <td>2025-09-09</td>
-      <td>2025-09-17</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-09-17 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-09-23</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-09-23 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novasgr2025d.html">Nova Sgr 2025d</a></td>
+      <td>18 03 52.75</td>
+      <td>-31 27 24.7</td>
+      <td>V7994 Sgr</td>
+      <td>TCP J18035290-3127298</td>
+      <td>1</td>
+      <td>2025-09-24</td>
+      <td>2025-09-24</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-09-24 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novacen2025.html">Nova Cen 2025</a></td>
+      <td>14 37 21.77</td>
+      <td>-58 47 40.0</td>
+      <td>V1935 Cen</td>
+      <td>PNV J14372177-5847400</td>
+      <td>1</td>
+      <td>2025-09-24</td>
+      <td>2025-09-24</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-09-24 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
