--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 76
 </p><p class="card-text">Number of spectra: 4722
-</p><p class="card-text">Last update: 2025-10-22, 10:32</p>
+</p><p class="card-text">Last update: 2025-10-23, 17:27</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -939,6 +939,17 @@
       <td>2025-09-24</td>
       <td>2025-10-02</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-10-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novasgr2025b.html">Nova Sgr 2025b</a></td>
+      <td>17 59 04.46</td>
+      <td>-36 01 07.7</td>
+      <td>V7992 Sgr</td>
+      <td>TCP J17590439-3601111</td>
+      <td>4</td>
+      <td>2025-02-06</td>
+      <td>2025-03-02</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-03-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
