--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 34
-</p><p class="card-text">Number of spectra: 380
-</p><p class="card-text">Last update: 2025-11-14, 16:25</p>
+<p class="card-text">Number of stars: 36
+</p><p class="card-text">Number of spectra: 384
+</p><p class="card-text">Last update: 2025-11-14, 16:47</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -415,6 +415,24 @@
       <td>356.240</td>
       <td>43.523</td>
       <td>1</td>
+      <td>2025-11-13</td>
+      <td>2025-11-13</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="qrand.html">QR And</a></td>
+      <td>4.958</td>
+      <td>21.948</td>
+      <td>2</td>
+      <td>2025-11-13</td>
+      <td>2025-11-13</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="qrand.html">QR And</a></td>
+      <td>4.958</td>
+      <td>21.948</td>
+      <td>2</td>
       <td>2025-11-13</td>
       <td>2025-11-13</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
