--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 36
-</p><p class="card-text">Number of spectra: 384
-</p><p class="card-text">Last update: 2025-11-14, 16:47</p>
+<p class="card-text">Number of stars: 38
+</p><p class="card-text">Number of spectra: 389
+</p><p class="card-text">Last update: 2025-11-14, 17:28</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -117,7 +117,7 @@
       <td><a href="sscyg.html">SS Cyg</a></td>
       <td>21 42 42.80</td>
       <td>+43 35 09.86</td>
-      <td>97</td>
+      <td>98</td>
       <td>2015-08-03</td>
       <td>2025-08-25</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-08-25 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -429,13 +429,31 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td><a href="qrand.html">QR And</a></td>
-      <td>4.958</td>
-      <td>21.948</td>
-      <td>2</td>
-      <td>2025-11-13</td>
-      <td>2025-11-13</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td><a href="amher.html">AM Her</a></td>
+      <td>274.055</td>
+      <td>49.868</td>
+      <td>4</td>
+      <td>2021-09-13</td>
+      <td>2025-06-10</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-06-10 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="ahher.html">AH Her</a></td>
+      <td>251.042</td>
+      <td>25.251</td>
+      <td>1</td>
+      <td>2025-08-06</td>
+      <td>2025-08-06</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-08-06 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="rupeg.html">RU Peg</a></td>
+      <td>333.511</td>
+      <td>12.703</td>
+      <td>1</td>
+      <td>2025-11-11</td>
+      <td>2025-11-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
