--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 116
-</p><p class="card-text">Number of spectra: 11257
-</p><p class="card-text">Last update: 2025-11-22, 17:33</p>
+<p class="card-text">Number of stars: 117
+</p><p class="card-text">Number of spectra: 11269
+</p><p class="card-text">Last update: 2025-11-23, 10:16</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -146,10 +146,10 @@
       <td><a href="agdra.html">AG Dra</a></td>
       <td>16 01 41.01</td>
       <td>+66 48 10.13</td>
-      <td>905</td>
+      <td>906</td>
       <td>2013-04-03</td>
-      <td>2025-11-17</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-17 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-11-21</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-21 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>0</td>
       <td>0</td>
@@ -338,10 +338,10 @@
       <td><a href="chcyg.html">CH Cyg</a></td>
       <td>19 24 33.07</td>
       <td>+50 14 29.06</td>
-      <td>1041</td>
+      <td>1042</td>
       <td>2011-04-21</td>
-      <td>2025-11-08</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-11-21</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-21 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>1</td>
       <td>0</td>
       <td>1</td>
@@ -878,10 +878,10 @@
       <td><a href="sslep.html">SS Lep</a></td>
       <td>06 04 59.13</td>
       <td>-16 29 03.97</td>
-      <td>74</td>
+      <td>75</td>
       <td>2018-02-17</td>
-      <td>2025-04-25</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-04-25 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-11-17</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-17 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>60</td>
       <td>2</td>
       <td>2</td>
@@ -1106,10 +1106,10 @@
       <td><a href="v1261ori.html">V1261 Ori</a></td>
       <td>05 22 18.65</td>
       <td>-08 39 58.05</td>
-      <td>69</td>
+      <td>70</td>
       <td>2011-10-22</td>
-      <td>2025-11-01</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-01 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-11-17</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-17 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
       <td>3</td>
@@ -1130,7 +1130,7 @@
       <td><a href="v1413aql.html">V1413 Aql</a></td>
       <td>19 03 46.84</td>
       <td>+16 26 16.97</td>
-      <td>278</td>
+      <td>282</td>
       <td>2013-08-10</td>
       <td>2025-11-21</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-21 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -1346,10 +1346,10 @@
       <td><a href="v627cas.html">V627 Cas</a></td>
       <td>22 57 40.97</td>
       <td>+58 49 12.56</td>
-      <td>59</td>
+      <td>60</td>
       <td>2013-08-06</td>
-      <td>2025-10-28</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-10-28 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-11-21</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-21 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>2</td>
       <td>2</td>
@@ -1478,10 +1478,10 @@
       <td><a href="zand.html">Z And</a></td>
       <td>23 33 39.96</td>
       <td>+48 49 05.97</td>
-      <td>384</td>
+      <td>385</td>
       <td>2010-10-30</td>
-      <td>2025-11-17</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-17 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-11-21</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-21 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>15</td>
       <td>1</td>
       <td>1</td>
@@ -1521,6 +1521,18 @@
       <td>30</td>
       <td>1</td>
       <td>1</td>
+    </tr>
+    <tr>
+      <td><a href="llcas.html">LL Cas</a></td>
+      <td>347.334</td>
+      <td>54.747</td>
+      <td>2</td>
+      <td>2025-11-21</td>
+      <td>2025-11-21</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-11-21 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>0</td>
+      <td>-</td>
+      <td>-</td>
     </tr>
   </tbody>
 </table><br><br>
