--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
 
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 39
-</p><p class="card-text">Number of spectra: 388
-</p><p class="card-text">Last update: 2025-12-11, 08:41</p>
+<p class="card-text">Number of stars: 41
+</p><p class="card-text">Number of spectra: 390
+</p><p class="card-text">Last update: 2025-12-12, 08:38</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -463,6 +463,24 @@
       <td>-</td>
       <td>-</td>
       <td>-</td>
+    </tr>
+    <tr>
+      <td><a href="wwcet.html">WW Cet</a></td>
+      <td>2.853</td>
+      <td>-11.479</td>
+      <td>1</td>
+      <td>2025-12-11</td>
+      <td>2025-12-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-12-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="v555per.html">V555 Per</a></td>
+      <td>37.831</td>
+      <td>56.898</td>
+      <td>1</td>
+      <td>2025-12-11</td>
+      <td>2025-12-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-12-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
